cmake_minimum_required(VERSION 2.8)
project( shuttle )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
add_executable( shuttle shuttle.cpp )
find_library(WIRINGPI_LIBRARIES NAMES wiringPi)
add_library( shuttle_util STATIC shuttle_util.cpp )
target_link_libraries( shuttle ${OpenCV_LIBS} wiringPi shuttle_util)

